tests/expectations/parser/functions/mode_outside_tuple.out
Error [EPAR0370047]: expected function name
    --> test:3:15
     |
   3 |     transition(a: u8) -> public (u8, u8) {
     |               ^
